--- a/example/rackhd/monorail/smiConfig.json
+++ b/example/rackhd/monorail/smiConfig.json
@@ -1,9 +1,18 @@
 {
-	"_copyright": "#Copyright © 2017 Dell Inc. or its subsidiaries.  All Rights Reserved",
-	"dell":{
-
-		"configServerPath": "/api/smi/uri",
-		"wsmanCallbackUri": "http://172.31.128.1:9988/api/2.0/wsmanCallback/_IDENTIFIER_"
-
-	}
+    "_copyright": "#Copyright © 2017 Dell Inc. or its subsidiaries.  All Rights Reserved",
+    "dell":{
+        "configServerPath": "/api/smi/uri",
+        "wsmanCallbackUri": "http://172.31.128.1:9988/api/2.0/wsmanCallback/_IDENTIFIER_",
+        "credentials": {
+            "userName": "rackhd",
+            "password": "rackhd"
+        },
+        "shareFolder": {
+            "address": "172.31.128.1",
+            "shareType": 2,
+            "shareName": "share",
+            "username": "admin",
+            "password": "admin"
+        }
+    }
 }
