--- a/example/infrasim/docker-compose.yml
+++ b/example/infrasim/docker-compose.yml
@@ -8,17 +8,7 @@ networks:
       name: rackhd_southbound
 
 services:
-  infrasim0:
-    build: '.'
-    networks:
-      - southbound
-    privileged: true
-  infrasim1:
-    build: '.'
-    networks:
-      - southbound
-    privileged: true
-  infrasim2:
+  infrasim:
     build: '.'
     networks:
       - southbound
